# DataPilot

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
Pilot_Base/: app.py  chains.py  config.py  data_ingestion.py  debug_api.py  llms.py  prompts.py  rag_manager.py  requirements.txt  test_api.py  utils.py
Test Dataset/: QA.xlsx
data_analysis_agent/: app.py  chains.py  prompts.py  utils.py
